--- a/build.yaml
+++ b/build.yaml
@@ -17,3 +17,8 @@
 #     artifact-name: corne_left_with_logging
 #
 ---
+include:
+  - board: seeeduino_xiao_ble
+    shield: L4_left
+  - board: seeeduino_xiao_ble
+    shield: L4_right
