--- a/boards/shields/l4/l4.dtsi
+++ b/boards/shields/l4/l4.dtsi
@@ -4,6 +4,7 @@
   chosen {
     zmk,kscan = &kscan0;
     zmk,matrix-transform = &default_transform;
+    zmk,battery = &vbatt;
   };
 
   default_transform: keymap_transform_0 {
@@ -23,5 +24,13 @@
     compatible = "zmk,kscan-gpio-matrix";
     diode-direction = "row2col";
     wakeup-source;
+  };
+
+  vbatt: vbatt {
+    compatible = "zmk,battery-voltage-divider";
+    io-channels = <&adc 7>;
+    output-ohms = <510000>;
+    full-ohms = <(510000 + 1000000)>;
+    power-gpios = <&gpio0 14 GPIO_ACTIVE_LOW>;
   };
 };
