--- a/boards/shields/l4/l4.dtsi
+++ b/boards/shields/l4/l4.dtsi
@@ -31,6 +31,6 @@
     io-channels = <&adc 7>;
     output-ohms = <510000>;
     full-ohms = <(510000 + 1000000)>;
-    power-gpios = <&gpio0 14 GPIO_ACTIVE_LOW>;
+    power-gpios = <&gpio0 14 (GPIO_OPEN_DRAIN | GPIO_ACTIVE_LOW)>;
   };
 };
