--- a/boards/shields/l4/l4.dtsi
+++ b/boards/shields/l4/l4.dtsi
@@ -1,10 +1,11 @@
 #include <dt-bindings/zmk/matrix_transform.h>
+#include "l4-layouts.dtsi"
 
 / {
   chosen {
     zmk,kscan = &kscan0;
     zmk,matrix-transform = &default_transform;
-    zmk,battery = &vbatt;
+    zmk,physical-layout = &physical_layout0;
   };
 
   default_transform: keymap_transform_0 {
@@ -20,18 +21,10 @@
     >;
   };
 
-  kscan0: kscan {
+  kscan0: kscan0 {
     compatible = "zmk,kscan-gpio-matrix";
     diode-direction = "row2col";
     wakeup-source;
-  };
-
-  vbatt: vbatt {
-    compatible = "zmk,battery-voltage-divider";
-    io-channels = <&adc 7>;
-    output-ohms = <510000>;
-    full-ohms = <(510000 + 1000000)>;
-    power-gpios = <&gpio0 14 (GPIO_OPEN_DRAIN | GPIO_ACTIVE_LOW)>;
   };
 };
 
