--- a/boards/shields/l4/l4.dtsi
+++ b/boards/shields/l4/l4.dtsi
@@ -1,10 +1,13 @@
 #include <dt-bindings/zmk/matrix_transform.h>
 #include "l4-layouts.dtsi"
 
+&physical_layout0 {
+  transform = <&default_transform>;
+};
+
 / {
   chosen {
     zmk,kscan = &kscan0;
-    zmk,matrix-transform = &default_transform;
     zmk,physical-layout = &physical_layout0;
   };
 
